--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@ permalink: /about
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right" id="i18_navbar">
-                        <li><a class="page-scroll" href="#page-top"><span data-i18n="nav.home">{{ site.landing.home }}</span></a></li>
+                        <li><a href="/"><span>Blog</span></a></li>
                         <li><a class="page-scroll" href="#about_me"><span data-i18n="nav.about_me">{{ site.landing.about }}</span></a></li>
                         <li><a class="page-scroll" href="#career"><span data-i18n="nav.career">{{ site.landing.career }}</span></a></li>
                         <li><a class="page-scroll" href="#skills"><span data-i18n="nav.skills">{{ site.landing.skills }}</span></a></li>
-                        <li><a class="page-scroll" href="#project"><span data-i18n="nav.projects">{{ site.landing.projects }}</span></a></li>
-                        <li><a class="page-scroll" href="#blog"><span data-i18n="nav.blog">{{ site.landing.blog }}</span></a></li>
-                        <li><a class="page-scroll" href="#link"><span data-i18n="nav.link">{{ site.landing.link }}</span></a></li>
                         <li>
                             <a class="btn btn-sm set_en"><img src="{{"static/img/flags/United-States.png"| prepend: site.baseurl }}" height="16px" width="16px"></a>
                         </li>
@@ -43,77 +40,72 @@ permalink: /about
 
 
         </div>
-        <section id="about_me" class="features"style="background-color: #1c598e;height: 350px;">
-            <div class="container" id="i18_about_me">
-                <div class="row m-b-lg">
-                    <div class="col-lg-12 text-center">
-                        <div class="navy-line"></div>
-                        <h1><span data-i18n="about_me.about_me" style="color: #ffffff;">About Me</span></h1>
-                        <!-- <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p> -->
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- python -->
-                    <div class="col-xs-2 wow fadeInLeft">
-                        <div class="team-member">
-                            <div class="vote-icon">
-                                <i class="icon-python"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- linux -->
-                    <div class="col-xs-2 wow fadeInLeft">
-                        <div class="team-member">
-                            <div class="vote-icon">
-                                <i class="icon-shell"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- avatar -->
-                    <div class="col-xs-4">
-                        <div class="team-member wow zoomIn">
-                            <h4><span class="navy">{{ site.author.last_name }}  {{ site.author.first_name }}</span></h4>
-                            <ul class="list-inline social-icon">
-                                <li><a href="https://github.com/{{ site.author.github_username }}" target="blank"><i class="fa fa-github"></i></a>
-                                </li>
-                                <li><a href="mailto:{{ site.author.email }}"><i class="fa fa-envelope-o"></i></a>
-                                </li>
-                                <li><a href="https://www.facebook.com/{{ site.author.facebook_username }}" target="blank"><i class="fa fa-facebook"></i></a>
-                                </li>
-                                <li><a href="{{ site.url}}/feed.xml" target="blank"><i class="fa fa-rss"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- html -->
-                    <div class="col-xs-2 wow fadeInRight">
-                        <div class="team-member">
-                            <div class="vote-icon">
-                                <i class="icon-angular"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- docker -->
-                    <div class="col-xs-2 wow fadeInRight">
-                        <div class="team-member">
-                            <div class="vote-icon">
-                                <i class="icon-docker"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-                        <p><span data-i18n="about_me.des" style="color: #ffffff;">
-                            I am a Python engineer with website development, automation Ops and writing scripts experience. Life is a continuous learning process, so work makes me more rigorous, travel makes my life more colorful. I can make lots of friends when I coding and travel.
-                        </span></p>
-                    </div>
-                </div>
-            </div>
-        </section>
     </div>
 </div>
-
+<section id="image"  style="margin-top: 50px">
+    <div class="container">
+        <div class="row">
+		<img style="display: block;margin:auto;width:60%; min-width:300px" src="static/img/landing/datascience_blog.png">
+            <!--<div class="col-lg-12 text-center wow zoomIn" id="i18_blog">
+                <br><br><br>
+                <a class="btn btn-lg btn-default btn-rounded btn-outline wow bounceIn" href="/"><span data-i18n="blog.my_blog">My Blog</span></a>
+                <br><br><br>
+            </div>-->
+        </div>
+    </div>
+</section>
+<section id="about_me" class="features">
+    <div class="container" id="i18_about_me">
+        <div class="row m-b-lg">
+            <div class="col-lg-12 text-center">
+                <div class="navy-line"></div>
+                <h1><span data-i18n="about_me.about_me">About Me</span></h1>
+                <!-- <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p> -->
+            </div>
+        </div>
+        <div class="row">
+            <!-- python -->
+            <div class="col-xs-2 wow fadeInLeft">
+                <div class="team-member">
+                </div>
+            </div>
+            <!-- linux -->
+            <div class="col-xs-2 wow fadeInLeft">
+                <div class="team-member">
+                </div>
+            </div>
+            <!-- avatar -->
+            <div class="col-xs-4">
+                <div class="team-member wow zoomIn">
+                    <h4><span class="navy">{{ site.author.last_name }}  {{ site.author.first_name }}</span></h4>
+                    <ul class="list-inline social-icon">
+                        <li><a href="https://github.com/{{ site.author.github_username }}" target="blank"><i class="fa fa-github"></i></a>
+                        </li>
+                        <li><a href="mailto:{{ site.author.email }}"><i class="fa fa-envelope-o"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- html -->
+            <div class="col-xs-2 wow fadeInRight">
+                <div class="team-member">
+                </div>
+            </div>
+            <!-- docker -->
+            <div class="col-xs-2 wow fadeInRight">
+                <div class="team-member">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
+                <p><span data-i18n="about_me.des" style="color: #2b2b26;">
+                    I am a Python engineer with website development, automation Ops and writing scripts experience. Life is a continuous learning process, so work makes me more rigorous, travel makes my life more colorful. I can make lots of friends when I coding and travel.
+                </span></p>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 <section id="career" class="timeline features gray-section">
@@ -256,7 +248,7 @@ permalink: /about
         </div>
     </div>
 </section>
-
+<!--
 <section id="project" class="project gray-section features">
     <div class="container" id="i18_projects">
         <div class="row m-b-lg">
@@ -374,42 +366,25 @@ permalink: /about
         </div>
     </div>
     <br>
-</section>
+</section>-->
 
-<section id="blog" class="navy-section testimonials" style="margin-top: 0">
+<section id="blog" class="navy-section testimonials" style="margin-top: 150px">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center wow zoomIn" id="i18_blog">
+            <!--<div class="col-lg-12 text-center wow zoomIn" id="i18_blog">
                 <br><br><br>
                 <a class="btn btn-lg btn-default btn-rounded btn-outline wow bounceIn" href="/"><span data-i18n="blog.my_blog">My Blog</span></a>
                 <br><br><br>
-            </div>
+            </div>-->
         </div>
     </div>
 </section>
 
 <section id="link" class="contact features">
     <div class="container" id="i18_link">
-        <div class="row m-b-lg">
-            <div class="col-lg-12 text-center">
-                <div class="navy-line"></div>
-                <h1><span data-i18n="link.link">Link</span></h1>
-            </div>
-        </div>
+
         <div class="row">
             <div class="col-sm-4 col-sm-offset-4">
-                <div class="team-member wow zoomIn">
-                    <h4><span class="navy">{{ site.jingyu.last_name }}</span> {{ site.jingyu.first_name }}</h4>
-                    <p>
-                        {{ site.jingyu.description }}
-                    </p>
-                    <ul class="list-inline social-icon">
-                        <li><a href="{{ site.jingyu.link }}" target="blank"><i class="fa fa-link"></i></a>
-                        </li>
-                        <li><a href="mailto:{{ site.jingyu.email }}"><i class="fa fa-envelope-o"></i></a>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </div>
         <div class="row">
