--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ permalink: /about
                             <i class="fa fa-plus-square"></i>
                         </div>
                         <div class="vertical-timeline-content wow rotateInUpRight">
-                            <h2><span data-i18n="career.nextcode">Nextcode</span></h2>
-                            <p><span data-i18n="career.nextcode_des">Now I am in Nextcode and develop website with Python code for genetic analysis. </span></p>
-                            <span class="vertical-date"><span data-i18n="career.nextcode_date"> Apr. 2016 </span><br/> <small><span data-i18n="career.nextcode_job">Python Developer</span></small> </span>
+                            <h2><span data-i18n="career.italki">italki</span></h2>
+                            <p><span data-i18n="career.italki_des">I'm charged with developing and customizing the analytics solution for the world's largest language learning marketplace. We increased data collection by 30x, while creating an ETL solution to scale using EMR, Hive, Luigi and Redshift.</span></p>
+                            <span class="vertical-date"><span data-i18n="career.italki_date"> Aug. 2015 </span><br/> <small><span data-i18n="career.italki_job">Data Scientist Lead</span></small> </span>
                         </div>
                     </div>
                     <!-- netease game -->
@@ -137,31 +137,9 @@ permalink: /about
                             <i class="fa fa-gamepad"></i>
                         </div>
                         <div class="vertical-timeline-content wow rotateInUpLeft">
-                            <h2><span data-i18n="career.netease">Netease Game</span></h2>
-                            <p><span data-i18n="career.netease_des">In Netease game, I learned game service system and use Python code for ops. </span></p>
-                            <span class="vertical-date"><span data-i18n="career.netease_date"> Jun. 2015 </span><br/> <small><span data-i18n="career.netease_job">Dev Ops</span></small> </span>
-                        </div>
-                    </div>
-                    <!-- uloud -->
-                    <div class="vertical-timeline-block">
-                        <div class="vertical-timeline-icon navy-bg wow rotateIn">
-                            <i class="fa fa-cloud"></i>
-                        </div>
-                        <div class="vertical-timeline-content wow rotateInUpRight">
-                            <h2><span data-i18n="career.ucloud">Ucloud</span></h2>
-                            <p><span data-i18n="career.ucloud_des">In ucloud, I started to deal with servers and Linux system and use shell scripts to manage massive server.</span></p>
-                            <span class="vertical-date"><span data-i18n="career.ucloud_date"> Sep. 2013 </span><br/> <small><span data-i18n="career.ucloud_job">Dev Ops</span></small> </span>
-                        </div>
-                    </div>
-                    <!-- student -->
-                    <div class="vertical-timeline-block">
-                        <div class="vertical-timeline-icon navy-bg wow rotateIn">
-                            <i class="fa fa-book"></i>
-                        </div>
-                        <div class="vertical-timeline-content wow rotateInUpLeft">
-                            <h2><span data-i18n="career.college">Graduation</span></h2>
-                            <p><span data-i18n="career.college_des">At July 2013,I graduated from college and started my IT technology tour.</span></p>
-                            <span class="vertical-date"><span data-i18n="career.college_date"> Jul. 2013 </span><br/> <small><span data-i18n="career.college_job">Student</span></small> </span>
+                            <h2><span data-i18n="career.snl">Sandia National Laboratories</span></h2>
+                            <p><span data-i18n="career.snl_des">Outlier detection with PCA, computer vision with matlab and R. I worked mainly on signal processing and data compression using Savitzky Golay.</span></p>
+                            <span class="vertical-date"><span data-i18n="career.snl_date"> Jul. 2013 </span><br/> <small><span data-i18n="career.snl_job">Engineering Data Analyst</span></small> </span>
                         </div>
                     </div>
 
@@ -196,11 +174,11 @@ permalink: /about
           <br>
           <div class="row">
             <div class="col-lg-1 col-lg-offset-2 wow fadeInRight">
-              <p>HTML</p>
+              <p>R</p>
             </div>
             <div class="col-lg-7 wow fadeInRight">
                 <div class="progress progress-bar-default">
-                    <div style="width: 65%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="65" role="progressbar" class="progress-bar">
+                    <div style="width: 90%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="65" role="progressbar" class="progress-bar">
                         <!-- <span class="sr-only">65% Complete (success)</span> -->
                     </div>
                 </div>
@@ -213,7 +191,7 @@ permalink: /about
             </div>
             <div class="col-lg-7 wow fadeInLeft">
                 <div class="progress progress-bar-default">
-                    <div style="width: 80%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" role="progressbar" class="progress-bar">
+                    <div style="width: 60%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" role="progressbar" class="progress-bar">
                         <!-- <span class="sr-only">80% Complete (success)</span> -->
                     </div>
                 </div>
@@ -222,7 +200,7 @@ permalink: /about
           <br>
           <div class="row">
             <div class="col-lg-1 col-lg-offset-2 wow fadeInRight">
-              <p>AngularJS</p>
+              <p>Hadoop technologies (EMR, Hive, Sqoop)</p>
             </div>
             <div class="col-lg-7 wow fadeInRight">
                 <div class="progress progress-bar-default">
@@ -235,7 +213,20 @@ permalink: /about
           <br>
           <div class="row">
             <div class="col-lg-1 col-lg-offset-2 wow fadeInLeft">
-              <p>Ionic</p>
+              <p>Statistics</p>
+            </div>
+            <div class="col-lg-7 wow fadeInLeft">
+                <div class="progress progress-bar-default">
+                    <div style="width: 85%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="60" role="progressbar" class="progress-bar">
+                        <!-- <span class="sr-only">60% Complete (success)</span> -->
+                    </div>
+                </div>
+            </div>
+          </div>
+          <br>
+          <div class="row">
+            <div class="col-lg-1 col-lg-offset-2 wow fadeInLeft">
+              <p>HTML/CSS</p>
             </div>
             <div class="col-lg-7 wow fadeInLeft">
                 <div class="progress progress-bar-default">
