--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ permalink: /about
                         <div class="vertical-timeline-content wow rotateInUpRight">
                             <h2><span data-i18n="career.italki">italki</span></h2>
                             <p><span data-i18n="career.italki_des">I'm charged with developing and customizing the analytics solution for the world's largest language learning marketplace. We increased data collection by 30x, while creating an ETL solution to scale using EMR, Hive, Luigi and Redshift.</span></p>
-                            <span class="vertical-date"><span data-i18n="career.italki_date"> Aug. 2015 </span><br/> <small><span data-i18n="career.italki_job">Data Scientist Lead</span></small> </span>
+                            <span class="vertical-date"><span data-i18n="career.italki_date"> Aug. 2015 </span><br/> <small><span data-i18n="career.italki_job">Analytics Lead \n Data Engineer</span></small> </span>
                         </div>
                     </div>
                     <!-- netease game -->
