removing unnecessary images - changing text further

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ permalink: /about
                     <ul class="nav navbar-nav navbar-right" id="i18_navbar">
                         <li><a href="/"><span>Blog</span></a></li>
                         <li><a class="page-scroll" href="#about_me"><span data-i18n="nav.about_me">{{ site.landing.about }}</span></a></li>
-                        <li><a class="page-scroll" href="#career"><span data-i18n="nav.career">{{ site.landing.career }}</span></a></li>
-                        <li><a class="page-scroll" href="#skills"><span data-i18n="nav.skills">{{ site.landing.skills }}</span></a></li>
+                        <!--<li><a class="page-scroll" href="#career"><span data-i18n="nav.career">{{ site.landing.career }}</span></a></li>-->
+                        <!--<li><a class="page-scroll" href="#skills"><span data-i18n="nav.skills">{{ site.landing.skills }}</span></a></li>-->
                         <li>
                             <a class="btn btn-sm set_en"><img src="{{"static/img/flags/United-States.png"| prepend: site.baseurl }}" height="16px" width="16px"></a>
                         </li>
@@ -100,7 +100,7 @@ permalink: /about
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
                 <p><span data-i18n="about_me.des" style="color: #2b2b26;">
-                    I am a Python engineer with website development, automation Ops and writing scripts experience. Life is a continuous learning process, so work makes me more rigorous, travel makes my life more colorful. I can make lots of friends when I coding and travel.
+                        I am a data engineer and a data analyst. Born in Albuquerque, New Mexico and now based in NYC, I have done data work for the national labs and the tech industry and have lived and worked in Taiwan and Shanghai, China.
                 </span></p>
             </div>
         </div>
@@ -359,17 +359,17 @@ permalink: /about
     <br>
 </section>-->
 
-<section id="blog" class="navy-section testimonials" style="margin-top: 150px">
-    <div class="container">
-        <div class="row">
-            <!--<div class="col-lg-12 text-center wow zoomIn" id="i18_blog">
-                <br><br><br>
-                <a class="btn btn-lg btn-default btn-rounded btn-outline wow bounceIn" href="/"><span data-i18n="blog.my_blog">My Blog</span></a>
-                <br><br><br>
-            </div>-->
-        </div>
-    </div>
-</section>
+<!--<section id="blog" class="navy-section testimonials" style="margin-top: 150px">-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--&lt;!&ndash;<div class="col-lg-12 text-center wow zoomIn" id="i18_blog">-->
+                <!--<br><br><br>-->
+                <!--<a class="btn btn-lg btn-default btn-rounded btn-outline wow bounceIn" href="/"><span data-i18n="blog.my_blog">My Blog</span></a>-->
+                <!--<br><br><br>-->
+            <!--</div>&ndash;&gt;-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
 
 <section id="link" class="contact features">
     <div class="container" id="i18_link">
